[gd_scene load_steps=25 format=3 uid="uid://dmkkas0u00f1t"]

[ext_resource type="Script" path="res://Scripts/Managers/terminal_scene.gd" id="1_nrr7a"]
[ext_resource type="AudioStream" uid="uid://dfiyf6s4ta5e0" path="res://Sounds/Backgrounds/terminal.wav" id="2_uqucm"]
[ext_resource type="Texture2D" uid="uid://5bg7oc5mt0vb" path="res://Sprites/UI/terminal_backgrounds.png" id="3_cqyb5"]
[ext_resource type="Texture2D" uid="uid://cpylawk4b3s6j" path="res://Sprites/UI/computer_sheet.png" id="3_dyt2q"]
[ext_resource type="PackedScene" uid="uid://dnaggoj45isfh" path="res://Scenes/TerminalElements/nodes_legend.tscn" id="4_ft8ou"]
[ext_resource type="PackedScene" uid="uid://c02ntgyr1bb1j" path="res://Scenes/TerminalElements/map_node.tscn" id="5_6svpl"]
[ext_resource type="PackedScene" uid="uid://c3sshuw4teyhk" path="res://Scenes/TerminalElements/link_sprite.tscn" id="6_sp40k"]
[ext_resource type="PackedScene" uid="uid://88iupaxjnpvm" path="res://Scenes/TerminalElements/info.tscn" id="7_il0do"]
[ext_resource type="FontFile" uid="uid://dxr68c8ej2ev0" path="res://Sprites/Fonts/LowresPixel-Regular.otf" id="8_cwtsk"]
[ext_resource type="PackedScene" uid="uid://c74t16iivk706" path="res://Scenes/TerminalElements/log.tscn" id="10_fmfqu"]
[ext_resource type="PackedScene" uid="uid://dik7767w56mld" path="res://Scenes/TerminalElements/loadout.tscn" id="11_1syya"]
[ext_resource type="PackedScene" uid="uid://due07vhhx1egd" path="res://Scenes/TerminalElements/nexus_button.tscn" id="12_smgwj"]
[ext_resource type="PackedScene" uid="uid://bqv5qgjt5buty" path="res://Scenes/TerminalElements/return_button.tscn" id="13_wurnb"]
[ext_resource type="PackedScene" uid="uid://4p227i7nigqx" path="res://Scenes/TerminalElements/log_button.tscn" id="14_co0p5"]
[ext_resource type="AudioStream" uid="uid://cda3e6rcnwx28" path="res://Sounds/FX/pick_up.wav" id="15_r46h8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wkf0n"]
atlas = ExtResource("3_cqyb5")
region = Rect2(0, 1536, 960, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5hep"]
atlas = ExtResource("3_dyt2q")
region = Rect2(64, 1774, 540, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4vth"]
atlas = ExtResource("3_dyt2q")
region = Rect2(0, 2141, 41, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_gogff"]
atlas = ExtResource("3_dyt2q")
region = Rect2(16, 848, 541, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_blqbs"]
atlas = ExtResource("3_dyt2q")
region = Rect2(686, 992, 262, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lwbf"]
atlas = ExtResource("3_dyt2q")
region = Rect2(704, 870, 68, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ss3w"]
atlas = ExtResource("3_dyt2q")
region = Rect2(786, 870, 66, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eaq3"]
atlas = ExtResource("3_dyt2q")
region = Rect2(808, 910, 44, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvfrw"]
atlas = ExtResource("3_dyt2q")
region = Rect2(684, 914, 120, 34)

[node name="Terminal4" type="Control" groups=["TerminalScene"]]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1.34, 1.34)
script = ExtResource("1_nrr7a")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_uqucm")
pitch_scale = 0.85
bus = &"FX"

[node name="TerminalSprite" type="Sprite2D" parent="."]
position = Vector2(361, 201)
scale = Vector2(0.75, 0.781656)
texture = SubResource("AtlasTexture_wkf0n")

[node name="MapBackground" type="Sprite2D" parent="."]
position = Vector2(247.015, 146.746)
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_l5hep")

[node name="Title" type="Sprite2D" parent="MapBackground"]
position = Vector2(-237.5, -105)
texture = SubResource("AtlasTexture_a4vth")

[node name="Frame" type="Sprite2D" parent="MapBackground" groups=["MapFrame"]]
visible = false
texture = SubResource("AtlasTexture_gogff")

[node name="NodesLegend" parent="MapBackground" instance=ExtResource("4_ft8ou")]
offset_left = 174.0
offset_top = 106.0
offset_right = 214.0
offset_bottom = 146.0

[node name="TerminalName" type="Label" parent="MapBackground"]
offset_left = -258.396
offset_top = -90.1489
offset_right = 211.604
offset_bottom = 24.8511
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("8_cwtsk")
theme_override_font_sizes/font_size = 128
text = "REAL NAME"

[node name="Map" type="Sprite2D" parent="."]
position = Vector2(263.433, 155.97)
texture = SubResource("AtlasTexture_blqbs")

[node name="Level401" parent="Map" instance=ExtResource("5_6svpl")]
offset_left = -251.895
offset_top = -71.8806
offset_right = -251.895
offset_bottom = -71.8806
focus_neighbor_right = NodePath("../Level402")
available = true
node_level = 401
node_color = "blue"

[node name="Level402" parent="Map" instance=ExtResource("5_6svpl")]
offset_left = -169.06
offset_top = -88.2985
offset_right = -169.06
offset_bottom = -88.2985
focus_neighbor_left = NodePath("../Level401")
focus_neighbor_right = NodePath("../Level403")
node_level = 402
node_color = "blue"

[node name="LinkSprite" parent="Map/Level402" instance=ExtResource("6_sp40k")]
position = Vector2(-41.0448, 8.20896)
texture = SubResource("AtlasTexture_4lwbf")
offset = Vector2(0.055, -0.205)

[node name="Level403" parent="Map" instance=ExtResource("5_6svpl")]
offset_left = -92.194
offset_top = -53.9701
offset_right = -92.194
offset_bottom = -53.9701
focus_neighbor_left = NodePath("../Level402")
focus_neighbor_bottom = NodePath("../Level404")
node_level = 403
node_color = "blue"

[node name="LinkSprite" parent="Map/Level403" instance=ExtResource("6_sp40k")]
position = Vector2(-37.3134, -20.1493)
texture = SubResource("AtlasTexture_2ss3w")
offset = Vector2(0.315, 0.15)

[node name="Level404" parent="Map" instance=ExtResource("5_6svpl")]
offset_left = -145.179
offset_top = -9.9403
offset_right = -145.179
offset_bottom = -9.9403
focus_neighbor_top = NodePath("../Level403")
focus_neighbor_right = NodePath("../Level405")
node_level = 404
node_color = "blue"

[node name="LinkSprite" parent="Map/Level404" instance=ExtResource("6_sp40k")]
position = Vector2(26.8657, -22.388)
texture = SubResource("AtlasTexture_1eaq3")
offset = Vector2(0.12, 0.38)

[node name="Level405" parent="Map" instance=ExtResource("5_6svpl")]
offset_left = -11.215
offset_top = -41.283
offset_right = -11.215
offset_bottom = -41.283
focus_neighbor_left = NodePath("../Level404")
node_level = 405
node_color = "pink"

[node name="LinkSprite" parent="Map/Level405" instance=ExtResource("6_sp40k")]
position = Vector2(-67.1642, 15.6716)
texture = SubResource("AtlasTexture_wvfrw")
offset = Vector2(0.165, 0.315)

[node name="Info" parent="." instance=ExtResource("7_il0do")]
position = Vector2(207.463, 250.746)
scale = Vector2(0.8, 0.8)

[node name="Log" parent="." instance=ExtResource("10_fmfqu")]
visible = false
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 578.0
offset_top = 199.0
offset_right = 578.0
offset_bottom = 199.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.86, 0.86)

[node name="Loadout" parent="." instance=ExtResource("11_1syya")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.502
anchor_top = 0.31
anchor_right = 0.502
anchor_bottom = 0.31
offset_left = 578.0
offset_top = 199.0
offset_right = 578.0
offset_bottom = 199.0
scale = Vector2(0.86, 0.86)

[node name="NexusButton" parent="." instance=ExtResource("12_smgwj")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.104
anchor_top = 0.436
anchor_right = 0.104
anchor_bottom = 0.436
offset_left = 117.164
offset_top = 279.851
offset_right = 117.164
offset_bottom = 279.851
scale = Vector2(0.8, 0.8)

[node name="ReturnButton" parent="." instance=ExtResource("13_wurnb")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.396
anchor_right = 0.286
anchor_bottom = 0.396
offset_left = 85.075
offset_top = 329.0
offset_right = 85.075
offset_bottom = 329.0

[node name="LogButton" parent="." instance=ExtResource("14_co0p5")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.369
anchor_top = 0.395
anchor_right = 0.369
anchor_bottom = 0.395
offset_left = 173.881
offset_top = 329.1
offset_right = 173.881
offset_bottom = 329.1

[node name="ProgramAdded" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_r46h8")
bus = &"FX"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
