[gd_scene load_steps=26 format=3 uid="uid://7g8x0r5canbr"]

[ext_resource type="Script" path="res://Scripts/Managers/terminal_scene.gd" id="1_20cn2"]
[ext_resource type="Texture2D" uid="uid://cpylawk4b3s6j" path="res://Sprites/UI/computer_sheet.png" id="2_bbwhi"]
[ext_resource type="PackedScene" uid="uid://c02ntgyr1bb1j" path="res://Scenes/TerminalElements/map_node.tscn" id="4_230c3"]
[ext_resource type="PackedScene" uid="uid://c3sshuw4teyhk" path="res://Scenes/TerminalElements/link_sprite.tscn" id="4_h2awp"]
[ext_resource type="AudioStream" uid="uid://dfiyf6s4ta5e0" path="res://Sounds/Backgrounds/terminal.wav" id="5_2rv1v"]
[ext_resource type="FontFile" uid="uid://dxr68c8ej2ev0" path="res://Sprites/Fonts/LowresPixel-Regular.otf" id="5_3g0o7"]
[ext_resource type="PackedScene" uid="uid://88iupaxjnpvm" path="res://Scenes/TerminalElements/map_infos.tscn" id="5_n3kxe"]
[ext_resource type="PackedScene" uid="uid://due07vhhx1egd" path="res://Scenes/TerminalElements/nexus_button.tscn" id="7_33d10"]
[ext_resource type="PackedScene" uid="uid://bqv5qgjt5buty" path="res://Scenes/TerminalElements/return_button.tscn" id="8_46quv"]
[ext_resource type="Texture2D" uid="uid://bpiw4nr26ki61" path="res://Sprites/EnvironmentVirtual/Door_sheet_1.png" id="10_cklvg"]
[ext_resource type="PackedScene" uid="uid://c72dk3mb8bqns" path="res://Scenes/TerminalElements/new_loadout.tscn" id="10_og4b8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ue3d"]
atlas = ExtResource("2_bbwhi")
region = Rect2(0, 1199.22, 960, 513)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8wbx"]
atlas = ExtResource("2_bbwhi")
region = Rect2(64, 1774, 540, 240)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbata"]
atlas = ExtResource("2_bbwhi")
region = Rect2(0, 2141, 41, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_74m8f"]
atlas = ExtResource("2_bbwhi")
region = Rect2(16, 848, 541, 240)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_n1evk"]
load_path = "res://.godot/imported/terminal_1_nodes.png-45a5f5a3efd246261cfa9136ab29b44f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_rkmlo"]
atlas = SubResource("CompressedTexture2D_n1evk")
region = Rect2(20, 0, 16, 102)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci4et"]
atlas = ExtResource("2_bbwhi")
region = Rect2(119, 176, 2, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ockt"]
atlas = ExtResource("2_bbwhi")
region = Rect2(290, 2024, 314, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_uskum"]
atlas = ExtResource("10_cklvg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbi37"]
atlas = ExtResource("10_cklvg")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fc0v6"]
atlas = ExtResource("10_cklvg")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbirs"]
atlas = ExtResource("10_cklvg")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_shc6q"]
atlas = ExtResource("10_cklvg")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6nxyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uskum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbi37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uskum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbi37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uskum")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_gbi37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fc0v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbirs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shc6q")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Terminal0" type="Node2D" groups=["TerminalScene"]]
script = ExtResource("1_20cn2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0
metadata/_edit_use_anchors_ = true

[node name="TerminalSprite" type="Sprite2D" parent="Control"]
position = Vector2(361, 201)
scale = Vector2(0.75, 0.781656)
texture = SubResource("AtlasTexture_5ue3d")

[node name="MapBackground" type="Sprite2D" parent="Control"]
position = Vector2(248, 152)
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_k8wbx")

[node name="Title" type="Sprite2D" parent="Control/MapBackground"]
position = Vector2(-237.5, -105)
texture = SubResource("AtlasTexture_gbata")

[node name="Frame" type="Sprite2D" parent="Control/MapBackground" groups=["MapFrame"]]
visible = false
texture = SubResource("AtlasTexture_74m8f")

[node name="Loadout" parent="Control" instance=ExtResource("10_og4b8")]
position = Vector2(576, 200)
scale = Vector2(0.835, 0.835)

[node name="Map" type="Sprite2D" parent="Control"]
position = Vector2(304, 152)
scale = Vector2(1.5, 1.5)
texture = SubResource("AtlasTexture_rkmlo")

[node name="Level200" parent="Control/Map" instance=ExtResource("4_230c3")]
offset_left = -8.0
offset_top = -93.6667
offset_right = -8.0
offset_bottom = -93.6667
focus_neighbor_left = NodePath("../../NexusButton")
node_level = 200
node_color = "purple"

[node name="LinkSprite" parent="Control/Map/Level200" instance=ExtResource("4_h2awp")]
position = Vector2(0, 42.6667)
texture = SubResource("AtlasTexture_ci4et")

[node name="Level100" parent="Control/Map" instance=ExtResource("4_230c3")]
offset_left = -8.0
offset_top = -8.33334
offset_right = -8.0
offset_bottom = -8.33334
focus_neighbor_left = NodePath("../../NexusButton")
focus_neighbor_top = NodePath("../Level200")
focus_neighbor_bottom = NodePath("../../ReturnButton")
available = true
node_level = 100
node_color = "pink"

[node name="MapInfos" parent="Control/Map" instance=ExtResource("5_n3kxe")]

[node name="Info" type="Sprite2D" parent="Control" groups=["InfoPanel"]]
position = Vector2(331, 300)
scale = Vector2(0.8, 0.8)
texture = SubResource("AtlasTexture_7ockt")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Control/Info"]
offset_left = -142.0
offset_top = -40.0
offset_right = 1277.0
offset_bottom = 347.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("5_3g0o7")
theme_override_font_sizes/font_size = 64
autowrap_mode = 3

[node name="NexusButton" parent="Control" instance=ExtResource("7_33d10")]
layout_mode = 1
offset_left = -444.0
offset_top = -38.0
offset_right = -444.0
offset_bottom = -38.0
scale = Vector2(0.8, 0.8)

[node name="ReturnButton" parent="Control" instance=ExtResource("8_46quv")]
layout_mode = 1
offset_left = -428.0
offset_top = 7.99997
offset_right = -428.0
offset_bottom = 7.99997

[node name="DoorLabel" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 51.0
offset_top = 175.0
offset_right = 122.0
offset_bottom = 240.0

[node name="Label" type="RichTextLabel" parent="Control/DoorLabel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.5
offset_top = -29.0
offset_right = 316.5
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.2, 0.2)
theme_override_fonts/normal_font = ExtResource("5_3g0o7")
theme_override_font_sizes/normal_font_size = 64
text = "Terminal 1
locked"

[node name="Sprite" type="AnimatedSprite2D" parent="Control/DoorLabel"]
position = Vector2(37, 19)
sprite_frames = SubResource("SpriteFrames_6nxyl")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_2rv1v")
pitch_scale = 0.9
autoplay = true
bus = &"FX"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
